feat: get all products endpoint
