# api.yml
@@ -102,6 +102,22 @@ paths:
               schema:
                 $ref: "#/components/schemas/DeleteProductResponse"
   /products:
+    get:
+      summary: Get all products
+      operationId: getAllProducts
+      responses:
+        "200":
+          description: Returns product data
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetAllProductsResponse"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetAllProductsResponse"
     post:
       summary: Add a new product
       operationId: addProduct
@@ -198,6 +214,19 @@ components:
           type: boolean
         error:
           $ref: "#/components/schemas/ErrorResponse"
+    GetAllProductsResponse:
+      type: object
+      required:
+        - success
+      properties:
+        success:
+          type: boolean
+        error:
+          $ref: "#/components/schemas/ErrorResponse"
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/Product"
     Product:
       type: object
       required:
