# usecase/interfaces.go
@@ -8,6 +8,7 @@ import (
 
 type UsecaseInterface interface {
 	GetProduct(ctx context.Context, productID int) (model.Product, error)
+	GetAllProducts(ctx context.Context) ([]model.Product, error)
 	AddProduct(ctx context.Context, product model.Product) (int, model.ValidationProductResult, error)
 	UpdateProduct(ctx context.Context, input model.Product) (model.ValidationProductResult, error)
 	DeleteProduct(ctx context.Context, productID int) error
